--- a/style.css
+++ b/style.css
@@ -48,6 +48,17 @@ nav img {
     cursor: pointer;
 
 }
+nav .collage-name{
+    color:rgb(35, 35, 85);
+    font-size: 2.2rem;
+    transition: .3s ease-in;
+    margin-left: 3%;
+}
+nav .collage-name:hover{
+    color:#FDC93B;
+ 
+
+}
 
 nav .navigation ul {
     display: flex;
@@ -75,8 +86,16 @@ nav .navigation ul li a:hover {
 }
 
 /* Home */
+.back-video{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+
 #home {
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(9, 5, 54, 0.3)), url(/Images/College-front.jpeg);
+    background-image: linear-gradient(rgba(12,3,51,0.3), rgba(12,3,51,0.3));
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -90,11 +109,17 @@ nav .navigation ul li a:hover {
 
 }
 
-#home h2 {
+#home h1 {
+    text-transform: uppercase;
     color: white;
-    font-size: 2.2rem;
-    letter-spacing: 1px;
+    font-size: 3rem;
+    /* letter-spacing: 1px; */
+    transition: 0.5s ease;
 
+}
+#home h1:hover{
+    -webkit-text-stroke: 1px #fff;
+    color: transparent;
 }
 
 #home p {
@@ -139,6 +164,7 @@ nav .navigation ul li a:hover {
     color: #fff;
     background: #FDC93B;
     transition: 0.3s ease;
+    margin-left: 15px;;
 
 }
 
