--- a/style.css
+++ b/style.css
@@ -43,14 +43,15 @@ nav {
 
 }
 
-nav .Collage-name{
+nav .Collage-name {
     margin-left: 2.5%;
     font-size: 2rem;
     color: rgb(24, 24, 49);
     transition: .3s ease-in;
 }
-nav .Collage-name:hover{
-    font-size:1.8rem ;
+
+nav .Collage-name:hover {
+    font-size: 1.8rem;
     /* margin: 1%; */
     padding: 1%;
     color: #FDC93B;
@@ -61,15 +62,17 @@ nav img {
     cursor: pointer;
 
 }
-nav .collage-name{
-    color:rgb(35, 35, 85);
+
+nav .collage-name {
+    color: rgb(35, 35, 85);
     font-size: 2.2rem;
     transition: .3s ease-in;
     margin-left: 3%;
 }
-nav .collage-name:hover{
-    color:#FDC93B;
- 
+
+nav .collage-name:hover {
+    color: #FDC93B;
+
 
 }
 
@@ -99,7 +102,7 @@ nav .navigation ul li a:hover {
 }
 
 /* Home */
-.back-video{
+.back-video {
     position: absolute;
     right: 0;
     bottom: 0;
@@ -108,7 +111,7 @@ nav .navigation ul li a:hover {
 
 
 #home {
-    background-image: linear-gradient(rgba(12,3,51,0.3), rgba(12,3,51,0.3));
+    background-image: linear-gradient(rgba(12, 3, 51, 0.3), rgba(12, 3, 51, 0.3));
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -130,7 +133,8 @@ nav .navigation ul li a:hover {
     transition: 0.5s ease;
 
 }
-#home h1:hover{
+
+#home h1:hover {
     -webkit-text-stroke: 1px #fff;
     color: transparent;
 }
@@ -177,7 +181,8 @@ nav .navigation ul li a:hover {
     color: #fff;
     background: #FDC93B;
     transition: 0.3s ease;
-    margin-left: 15px;;
+    margin-left: 15px;
+    ;
 
 }
 
@@ -196,9 +201,9 @@ nav .navigation ul li a:hover {
 
 }
 
-#features .fea-base{
-     display: grid; 
-     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); 
+#features .fea-base {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 1rem;
     margin-top: 50px;
 }
@@ -229,89 +234,96 @@ nav .navigation ul li a:hover {
 }
 
 /* courses */
-#course{
+#course {
     padding: 8vw 8vw 0 8vw;
     text-align: center;
 }
 
-#course .courses{
+#course .courses {
     text-align: start;
     background: #f9f9ff;
-    height: 100%;position: relative;
+    height: 100%;
+    position: relative;
 }
-#course .course-box{
-    display: grid; 
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); 
-   grid-gap: 1rem;
-   margin-top: 50px;
+
+#course .course-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 1rem;
+    margin-top: 50px;
 }
-#course .courses img{
+
+#course .courses img {
     width: 100%;
     height: 60%;
     background-size: cover;
     background-position: center;
 }
-#course .courses .details{
-    padding: 15px 15px 0 15px   ;
+
+#course .courses .details {
+    padding: 15px 15px 0 15px;
 }
-#course .courses .details i{
+
+#course .courses .details i {
     color: #FDC93B;
     font-size: .9rem;
 }
-#course .courses .cost{
-    background-color: rgb(74,74, 136);
-    color: #f9f9ff;
-    line-height: 70px;
+
+#course .courses .cost img {
+
     width: 70px;
     height: 70px;
-    text-align: center;
     border-radius: 50%;
     position: absolute;
     right: 15px;
     bottom: 80px;
 }
+
 /* Registration */
 
 
-#registration{
-    padding: 6vw 8vw 6vw 8vw ;
-    background-image: linear-gradient(rgba(99, 112, 168, 0.5),rgba(99, 112, 168, 0.5)), url(/Images/College-front.jpeg);
+#registration {
+    padding: 6vw 8vw 6vw 8vw;
+    background-image: linear-gradient(rgba(99, 112, 168, 0.5), rgba(99, 112, 168, 0.5)), url(/Images/College-front.jpeg);
     width: 100%;
     height: 100%;
     background-size: contain;
-    background-position:  center;
+    background-position: center;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-#registration .reminder{
+
+#registration .reminder {
     color: #f9f9ff;
 
 }
-#registration .reminder h1{
+
+#registration .reminder h1 {
     color: #f9f9ff;
-    
+
 }
 
-#registration .reminder .time{
-display: flex;    
-margin-top: 40px;
+#registration .reminder .time {
+    display: flex;
+    margin-top: 40px;
 }
 
-#registration .reminder .time .date{
+#registration .reminder .time .date {
     text-align: center;
     padding: 13px 33px;
-    background: rgba(255, 255, 255,0.25);
+    background: rgba(255, 255, 255, 0.25);
     backdrop-filter: blur(4px);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     border-radius: 10px;
     margin: 0 5px 10px 5px;
-    border: 1px solid rgba(255, 255, 255,0.18);
+    border: 1px solid rgba(255, 255, 255, 0.18);
     font-size: 1.1rem;
     font-weight: 600;
-    
+
 }
-#registration .form{
+
+#registration .form {
     background: #fff;
     border-radius: 8px;
     display: flex;
@@ -319,23 +331,26 @@ margin-top: 40px;
     padding: 40px;
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 }
-#registration .form  input{
+
+#registration .form input {
     margin: 15px 0;
     padding: 15px 10px;
     border: 1px solid rgb(84, 40, 241);
     outline: none;
 }
-#registration .form .btn{
-margin-top: 20px;
+
+#registration .form .btn {
+    margin-top: 20px;
 }
-#registration .form  input::placeholder{
+
+#registration .form input::placeholder {
     color: #413c3c;
     font-weight: 500;
     font-size: 0.9rem;
 }
 
 
-#registration  .form a.yellow {
+#registration .form a.yellow {
     text-decoration: none;
     font-size: 0.9rem;
     padding: 13px 35px;
@@ -347,7 +362,8 @@ margin-top: 20px;
     transition: 0.3s ease;
 
 }
-#registration  .form a.yellow:hover {
+
+#registration .form a.yellow:hover {
     color: rgb(21, 21, 100);
     background: white;
 
