--- a/style.css
+++ b/style.css
@@ -17,7 +17,18 @@ h1 {
     font-weight: 700;
     color: rgb(35, 35, 85);
 }
-
+.headname{
+    text-transform: uppercase;
+    color: black;
+    font-size: 1.8rem;
+    margin: 2%;
+    transition: 0.3s ease-in;
+    
+}
+.headname:hover{
+    color: #FDC93B;
+    font-size: 1.6rem;
+}
 span {
     font-size: .9rem;
     color: #757373;
