--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 * {
     margin: 0;
-
     padding: 0;
     box-sizing: border-box;
 }
@@ -17,18 +16,9 @@ h1 {
     font-weight: 700;
     color: rgb(35, 35, 85);
 }
-.headname{
-    text-transform: uppercase;
-    color: black;
-    font-size: 1.8rem;
-    margin: 2%;
-    transition: 0.3s ease-in;
-    
-}
-.headname:hover{
-    color: #FDC93B;
-    font-size: 1.6rem;
-}
+
+
+
 span {
     font-size: .9rem;
     color: #757373;
@@ -51,12 +41,14 @@ nav {
     width: 100%;
     background-color: #fff;
     height: 18%;
+    z-index: 999;
 
 }
 
 nav .Collage-name {
     margin-left: 2.5%;
     font-size: 2rem;
+    text-transform: uppercase;
     color: rgb(24, 24, 49);
     transition: .3s ease-in;
 }
@@ -95,6 +87,10 @@ nav .navigation ul {
 
 }
 
+nav .navigation {
+    display: flex;
+}
+
 nav .navigation ul li {
     list-style: none;
     margin-left: 30px;
@@ -110,6 +106,16 @@ nav .navigation ul li a {
 
 nav .navigation ul li a:hover {
     color: #FDC93B;
+}
+
+#menu-btn {
+    width: 50px;
+    height: 50px;
+    display: none;
+}
+
+#menu-close {
+    display: none;
 }
 
 /* Home */
@@ -246,7 +252,7 @@ nav .navigation ul li a:hover {
 
 /* courses */
 #course {
-    padding: 8vw 8vw 0 8vw;
+    padding: 8vw 8vw 8vw 8vw;
     text-align: center;
 }
 
@@ -255,7 +261,17 @@ nav .navigation ul li a:hover {
     background: #f9f9ff;
     height: 100%;
     position: relative;
+    transition: .3s;
 }
+
+.courses:hover {
+    border: 3px solid #FDC93B;
+    padding: 3px;
+    border-radius: 5px;
+    border-color: #FDC93B;
+
+}
+
 
 #course .course-box {
     display: grid;
@@ -294,7 +310,7 @@ nav .navigation ul li a:hover {
 
 
 #registration {
-    padding: 6vw 8vw 6vw 8vw;
+    padding: 6vw 8vw 8vw 8vw;
     background-image: linear-gradient(rgba(99, 112, 168, 0.5), rgba(99, 112, 168, 0.5)), url(/Images/College-front.jpeg);
     width: 100%;
     height: 100%;
@@ -379,3 +395,142 @@ nav .navigation ul li a:hover {
     background: white;
 
 }
+
+/* footers */
+footer {
+    padding: 8vw;
+    background-color: #101C32;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+footer .footer-col {
+    padding-bottom: 40px;
+
+}
+
+footer h3 {
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 600;
+    padding-bottom: 20px;
+}
+
+footer li {
+    list-style: none;
+    color: #7b838a;
+    padding: 10px 0;
+    font-size: 20px;
+    cursor: pointer;
+    transition: 0.3s ease;
+
+}
+
+footer li:hover {
+    color: #FDC93B;
+}
+
+footer .copyright {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+footer .copyright p {
+    color: #fff;
+    font-size: 0.9rem;
+}
+
+.pro-links i {
+    padding: 10px 13px;
+    border: 1px solid #fff;
+    cursor: pointer;
+    font-size: 2rem;
+
+    transition: 0.3s ease;
+}
+
+.pro-links i:hover {
+    background: #FDC93B;
+    color: #fff;
+    border: 1px solid rgb(21, 21, 100);
+    cursor: pointer;
+}
+/* 
+@media (max-width: 760px) {
+    nav {
+        padding: 15px 20px;
+
+
+    }
+
+    nav img {
+        width: 130px;
+
+    }
+
+    #menu-btn {
+
+        display: initial;
+    }
+
+    #menu-close {
+        display: initial;
+        font-size: 1.6rem;
+        color: #fff;
+        padding: 30px 0 20px 20px;
+    }
+
+    nav .navigation ul {
+        position: absolute;
+        top: 0;
+        right: -220px;
+        width: 220px;
+        height: 100vh;
+        background: rgba(17, 20, 104, 0.45);
+        backdrop-filter: blur(4.5px);
+        border: 1px solid rgba(255, 155, 255, 0.18);
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    nav .navigation ul.active {
+        right: 0;
+    }
+
+    nav .navigation ul li {
+        padding: 20px 0 20px 40px;
+        margin-left: 0;
+    }
+
+    nav .navigation ul li a {
+        color: white;
+    }
+
+    #home {
+        padding-top: 0px;
+    }
+
+    #home p {
+        width: 90%;
+    }
+
+    #features {
+        padding: 8vw 4vw 0 4vw;
+    }
+
+    #course {
+        padding: 8vw 4vw 0 4vw;
+    }
+
+    footer .copyright .pro-links {
+        margin-top: 15px;
+    }
+} */
