--- a/style.css
+++ b/style.css
@@ -46,16 +46,15 @@ nav {
 }
 
 nav .Collage-name {
-    margin-left: 2.5%;
-    font-size: 2rem;
+    margin-left: 5px;
+    font-size: 1.5rem;
     text-transform: uppercase;
     color: rgb(24, 24, 49);
     transition: .3s ease-in;
 }
 
 nav .Collage-name:hover {
-    font-size: 1.8rem;
-    /* margin: 1%; */
+    font-size: 1.5rem;
     padding: 1%;
     color: #FDC93B;
 }
@@ -75,6 +74,7 @@ nav .collage-name {
 
 nav .collage-name:hover {
     color: #FDC93B;
+
 
 
 }
@@ -103,9 +103,13 @@ nav .navigation ul li a {
     font-weight: 500;
     transition: 0.3s ease;
 }
-
+nav .navigation ul li a.active,
 nav .navigation ul li a:hover {
     color: #FDC93B;
+    background-color: rgb(44, 44, 80);
+    border: 1px solid blueviolet;
+    border-radius: 5px;
+    transition: 0.3s ease;
 }
 
 #menu-btn {
@@ -398,8 +402,8 @@ nav .navigation ul li a:hover {
 
 /* footers */
 footer {
-    padding: 8vw;
-    background-color: #101C32;
+    padding: 2vw;
+    background-color:rgb(44, 44, 80);
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -461,6 +465,10 @@ footer .copyright p {
     border: 1px solid rgb(21, 21, 100);
     cursor: pointer;
 }
+
+
+
+
 /* 
 @media (max-width: 760px) {
     nav {
